// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<p
  className="sc-hZiMVj bNktpz"
>
  Text
</p>
`;

exports[`Caption renders colors 1`] = `
Array [
  <p
    className="sc-hZiMVj bNktpz"
  >
    Default color is Bulma
  </p>,
  <p
    className="sc-hZiMVj dLRynm"
    color="piccolo.100"
  >
    Piccolo
  </p>,
  <p
    className="sc-hZiMVj kzYVFI"
    color="trunks.100"
  >
    Trunks
  </p>,
  <p
    className="sc-hZiMVj loKqOS"
    color="krillin.100"
  >
    Krillin
  </p>,
]
`;

exports[`Caption renders font-weight 1`] = `
Array [
  <p
    className="sc-hZiMVj bNktpz"
  >
    Default font-weight is regular
  </p>,
  <p
    className="sc-hZiMVj DEdWp"
  >
    Font-weight is bold
  </p>,
]
`;

exports[`Caption renders line height 1`] = `
Array [
  <p
    className="sc-hZiMVj bNktpz"
  >
    Line-height is pre-calculated
  </p>,
  <p
    className="sc-hZiMVj zlaMO"
  >
    Custon line-height
  </p>,
]
`;

exports[`Caption renders semantic tags 1`] = `
Array [
  <p
    className="sc-hZiMVj bNktpz"
  >
    Paragraph is a default tag
  </p>,
  <span
    className="sc-hZiMVj bNktpz"
  >
    Span tag
  </span>,
  <label
    className="sc-hZiMVj bNktpz"
  >
    Label tag
  </label>,
]
`;

exports[`Caption renders sizes 1`] = `
Array [
  <p
    className="sc-hZiMVj bNktpz"
  >
    Default font-size is 16px
  </p>,
  <p
    className="sc-hZiMVj jLPXWg"
    size={24}
  >
    Size is 24px
  </p>,
  <p
    className="sc-hZiMVj eumuDk"
    size={48}
  >
    Size is 48px
  </p>,
]
`;

exports[`Caption renders text-align 1`] = `
Array [
  <p
    className="sc-hZiMVj bNktpz"
  >
    Text-align is not specified
  </p>,
  <p
    className="sc-hZiMVj gljdgA"
  >
    Centered Text
  </p>,
  <p
    className="sc-hZiMVj dJZeIb"
  >
    Right alignment
  </p>,
]
`;

exports[`Caption renders underline 1`] = `
Array [
  <p
    className="sc-hZiMVj bNktpz"
  >
    Default text-decoration is none
  </p>,
  <p
    className="sc-hZiMVj bAhwBe"
  >
    Underline Text
  </p>,
]
`;

exports[`Caption renders uppercase 1`] = `
Array [
  <p
    className="sc-hZiMVj bNktpz"
  >
    Default text-transform is none
  </p>,
  <p
    className="sc-hZiMVj kLfLeE"
  >
    Uppercase Text
  </p>,
]
`;
